k8s/applications/network/unifi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-svc
  namespace: unifi
spec:
  clusterIP: None
  selector:
    app: unifi-controller
  ports:
  - name: https-admin
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: https-portal
    port: 8843
    targetPort: 8843
    protocol: TCP
  - name: http-portal
    port: 8880
    targetPort: 8880
    protocol: TCP
  - name: http-admin
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: speed-test
    port: 6789
    targetPort: 6789
    protocol: TCP
  - name: ap-discovery
    port: 10001
    targetPort: 10001
    protocol: UDP
  - name: stun
    port: 3478
    targetPort: 3478
    protocol: UDP
