k8s/applications/network/unifi/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: unifi-tlsroute
  namespace: unifi
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "unifi.peekoff.com"
  rules:
    - backendRefs:
        - name: unifi-svc
          port: 8443
